--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,6 +8,12 @@
   Note: The styles for this gradient grid background is heavily inspired by the creator of this amazing site (https://dub.sh) – all credits go to them! 
 */
 
+@layer utilities {
+    .shadow-custom {
+        box-shadow: inset 10px -50px 94px 0 rgb(199, 199, 199, 0.2);
+    }
+}
+
 .main {
     width: 100vw;
     min-height: 100vh;
@@ -108,11 +114,11 @@
 }
 
 .copy_btn {
-    @apply w-7 h-7 rounded-full bg-white/10 shadow-[inset_10px_-50px_94px_0_rgb(199, 199, 199, 0.2)] backdrop-blur flex justify-center items-center cursor-pointer;
+    @apply w-7 h-7 rounded-full bg-white/10 shadow-custom backdrop-blur flex justify-center items-center cursor-pointer;
 }
 
 .glassmorphism {
-    @apply rounded-xl border border-gray-200 bg-white/20 shadow-[inset_10px_-50px_94px_0_rgb(199, 199, 199, 0.2)] backdrop-blur p-5;
+    @apply rounded-xl border border-gray-200 bg-white/20 shadow-custom backdrop-blur p-5;
 }
 
 .prompt_layout {
